# yoinkc

./: .gitignore  ARCHITECTURE_DIAGRAM.md  Containerfile  DESIGN_REVIEW.md  IMPLEMENTATION_PLAN.md  LICENSE  QUICK_START_DEVELOPER.md  README.md  README_DEVELOPER.md  design.md  inspectah-build  inspectah.spec  pyproject.toml  pyrightconfig.json  rhel2bootc-design.md  run-architect-test.sh  run-fleet-test.sh  run-inspectah.sh  run-yoinkc-fleet.sh  run-yoinkc.sh  yoinkc-build  yoinkc-refine  yoinkc.spec
.copr/: Makefile
completions/: inspectah.bash  inspectah.fish  inspectah.zsh  yoinkc.bash  yoinkc.fish  yoinkc.zsh
docs/: future-inspection-coverage.md  future-visual-improvements.md  go-port-cutover-plan.md  nits-2026-03-16.md
input-20260323-133834/: Containerfile  README.md  audit-report.md  inspection-snapshot.json  kickstart-suggestion.ks  report.html  secrets-review.md
packaging/: inspectah-cli.spec  inspectah-go.spec  inspectah.spec
scripts/: build-codemirror.sh
specs/: cli-output-ux-spec.md
tests/: conftest.py  test_architect_analyzer.py  test_architect_export.py  test_architect_integration.py  test_architect_loader.py  test_architect_server.py  test_audit_report_output.py  test_baseline.py  test_cli.py  test_completions.py  test_config_category.py  test_config_exclusions.py  test_containerfile_output.py  test_containerfile_secrets_comments.py  test_crypto_policy.py  test_editor.py  test_entitlement.py  test_flatpak.py  test_fleet_cli.py  test_fleet_loader.py  test_fleet_merge.py  test_fleet_merge_redactions.py  test_fleet_output.py  test_fleet_schema.py  test_heuristic.py  test_heuristic_integration.py  test_html_report_output.py  test_inspectah_refine.py  test_inspectors.py  (+40 more)
(+650 files in other folders)
