[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoinkc"
version = "0.1.0"
description = "Inspect RHEL/CentOS hosts and produce bootc image artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yoinkc contributors" }]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
github = [
    "PyGithub>=2.0",
    "GitPython>=3.1",
]

[project.scripts]
yoinkc = "yoinkc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yoinkc = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
