[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspectah"
version = "0.5.1"
description = "Inspect RHEL/CentOS hosts and produce bootc image artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "inspectah contributors" }]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
github = [
    "PyGithub>=2.0",
    "GitPython>=3.1",
]

[project.scripts]
inspectah = "inspectah.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
inspectah = ["templates/*.j2", "templates/*.css", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
